fixed buy item route

--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -273,7 +273,7 @@
                                     <StackLayout row="1" column="0" colspan="3" orientation="horizontal">
                                         <label class="userListText"  [text]="item.first_name + ' ' + item.last_name" textAlignment = "left"></label>
                                     </StackLayout>
-                                    <Button text="Friend" row="0" rowspan="2" column="4" colspan="2" style="background-color: white; color: black;"></Button>
+                                    <Button id="buttonNeo" text="Friend" row="0" rowspan="2" column="4" colspan="2" style="background-color: white; color: black;"></Button>
                                 </GridLayout>
                             </ng-template>
                 </RadListView>
