--- a/app/item/item-detail.component.html
+++ b/app/item/item-detail.component.html
@@ -1,6 +1,6 @@
 <ActionBar title="Details" >
     <ActionItem (tap)="onItemLike($event)" ios.position="right" text="search" android.position="popup">
-        <Label text = "&#xf004;" [class]="liked ? 'fas t-36' : 'far t-36'"></Label>    
+        <Label text = "&#xf004;" [class]="itemService.loadedItemLiked ? 'fas t-36' : 'far t-36'"></Label>    
     </ActionItem>
     <!--
     <ActionItem ios.position="right" text="/" ></ActionItem>
@@ -10,9 +10,7 @@
 </ActionBar>
 
 <GridLayout columns="*,*,*,*,*,*,*,*,*,*" rows="*,*,*,*,*,*,*,*,*,*">
-    <RadListView row="0" rowspan="6" column="0" colspan="10" orientation="horizontal" [items]="item.img" swipeActions="false"
-        (scrollDragEnded)="onScrollDragEnded($event)" (scrollEnded)="onScrollEnded($event)"
-        width="100%" height="350">
+    <RadListView row="0" rowspan="6" column="0" colspan="10" orientation="horizontal" [items]="itemService.loadedItem.img" swipeActions="false" width="100%" height="350">
         <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal" itemWidth="350" itemHeight="350" [spanCount]="1"></ListViewLinearLayout>
         <ng-template let-img="item">
             <StackLayout>
@@ -21,13 +19,13 @@
         </ng-template>
     </RadListView>
     <GridLayout class="itemDetailInfo" row="6" rowspan="3" column="0" colspan="10" orientation="horizontal" rows="*,*,*,*" columns="*,*,*,*,*">
-        <Label row="0" rowspan="2" column="0" colspan="3" class="h1" width="100%" [text]="item.source" textWrap="false"></Label>
-        <Label row="1" rowspan="2" column="0" colspan="3" [text]="item.name" class="listing-left" textAlignment="left" textWrap="true"></Label>
-        <Label row="1" rowspan="2" column="3" colspan="2" [text]="'$' + item.price" class="listing-right" textAlignment="center" textWrap="true" style="font-size: 20;"></Label>
+        <Label row="0" rowspan="2" column="0" colspan="3" class="h1" width="100%" [text]="itemService.loadedItem.source" textWrap="false"></Label>
+        <Label row="1" rowspan="2" column="0" colspan="3" [text]="itemService.loadedItem.name" class="listing-left" textAlignment="left" textWrap="true"></Label>
+        <Label row="1" rowspan="2" column="3" colspan="2" [text]="'$' + itemService.loadedItem.price" class="listing-right" textAlignment="center" textWrap="true" style="font-size: 20;"></Label>
     </GridLayout>
     <Button row="8" rowspan="2" column="0" colspan="5"  class="itemDetailButton" [text]="saved ? 'Unsave For Later' : 'Save For Later'" backgroundColor="black" (tap)=onItemSave()></Button>
     <Button row="8" rowspan="2" column="5" colspan="5" class="itemDetailButton" text="Buy This Product" backgroundColor="blue" [nsRouterLink]="index" [queryParams]="{ id: id}"></Button>
     <StackLayout col="9" row="0">
-        <Label [class]="saved ? 'far t-36' : 'invisible'" style="color: green;" text="&#xf0c7;" horizontalAlignment="center"></Label>
+        <Label [class]="itemService.loadedItemSaved ? 'far t-36' : 'invisible'" style="color: green;" text="&#xf0c7;" horizontalAlignment="center"></Label>
     </StackLayout>
 </GridLayout>
